--- a/EduQuery.ai/frontend/chat.html
+++ b/EduQuery.ai/frontend/chat.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>EduQuery AI - Chat</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       background: linear-gradient(to right, #e0f7fa, #e1bee7);
       margin: 0;
       display: flex;
       flex-direction: column;
       height: 100vh;
+      transition: background 0.3s;
+    }
+
+    body.dark-mode {
+      background: linear-gradient(to right, #2c3e50, #4ca1af);
+      color: white;
     }
 
     .chat-header {
@@ -19,6 +27,57 @@
       color: white;
       text-align: center;
       font-size: 24px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .toggle-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0;
+      right: 0; bottom: 0;
+      background-color: #ccc;
+      border-radius: 24px;
+      transition: 0.4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 18px; width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      border-radius: 50%;
+      transition: 0.4s;
+    }
+
+    input:checked + .slider {
+      background-color: #2b8aed;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(26px);
     }
 
     .chat-box {
@@ -28,21 +87,29 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.3);
+      margin: 10px;
+      border-radius: 16px;
     }
 
     .chat-message {
       padding: 12px;
       border-radius: 12px;
       max-width: 70%;
+      animation: fadeInUp 0.3s ease;
     }
 
     .user {
-      background: #d1ecf1;
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
+      color: white;
       align-self: flex-end;
     }
 
     .bot {
-      background: #f1f8e9;
+      background: linear-gradient(135deg, #dce35b, #45b649);
+      color: black;
       align-self: flex-start;
     }
 
@@ -51,6 +118,9 @@
       padding: 20px;
       border-top: 1px solid #ccc;
       background: white;
+      position: sticky;
+      bottom: 0;
+      z-index: 10;
     }
 
     .chat-input textarea {
@@ -62,6 +132,12 @@
       font-size: 16px;
     }
 
+    .chat-input textarea:focus {
+      border-color: #2b8aed;
+      outline: none;
+      box-shadow: 0 0 0 2px rgba(43, 138, 237, 0.2);
+    }
+
     .chat-input button {
       margin-left: 10px;
       background: #2b8aed;
@@ -71,16 +147,61 @@
       font-size: 16px;
       border-radius: 8px;
       cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     .chat-input button:hover {
       background: #1e6cd6;
+      transform: scale(1.03);
+      box-shadow: 0 4px 12px rgba(43, 138, 237, 0.3);
+    }
+
+    .typing span {
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      margin: 0 2px;
+      background: #888;
+      border-radius: 50%;
+      animation: bounce 1.4s infinite ease-in-out both;
+    }
+
+    .typing span:nth-child(2) { animation-delay: 0.2s; }
+    .typing span:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(10px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes bounce {
+      0%, 80%, 100% { transform: scale(0); }
+      40% { transform: scale(1); }
+    }
+
+    @media (max-width: 600px) {
+      .chat-message {
+        max-width: 100%;
+      }
+      .chat-input textarea {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="chat-header">🤖 EduQuery AI Chat</div>
+  <div class="chat-header">
+    🤖 EduQuery AI Chat
+    <div class="toggle-container">
+      <label class="switch">
+        <input type="checkbox" id="themeToggle">
+        <span class="slider"></span>
+      </label>
+    </div>
+  </div>
+
   <div class="chat-box" id="chatBox"></div>
+
   <form class="chat-input" id="queryForm">
     <textarea id="queryInput" rows="2" placeholder="Ask something about your document..." required></textarea>
     <button type="submit">Send</button>
@@ -104,14 +225,15 @@
       const question = input.value.trim();
       if (!question) return;
 
-      // show user message
       addMessage(question, 'user');
       input.value = '';
 
-      // add loader placeholder
       const loader = document.createElement('div');
       loader.className = 'chat-message bot';
-      loader.innerHTML = `<em>Thinking...</em>`;
+      loader.innerHTML = `
+        <div class="typing">
+          <span></span><span></span><span></span>
+        </div>`;
       chatBox.appendChild(loader);
       chatBox.scrollTop = chatBox.scrollHeight;
 
@@ -124,17 +246,20 @@
 
         const data = await res.json();
         const answer = data.answer || 'No answer found.';
-        loader.innerHTML = answer;  // replace loader with response
+        loader.innerHTML = answer;
       } catch (err) {
         console.error(err);
         loader.innerHTML = 'Error fetching answer. Please try again.';
       }
-    });    
-    
-    // Optional: Redirect if user hasn't uploaded a doc
+    });
+
     if (!localStorage.getItem('docUploaded')) {
       window.location.href = 'upload.html';
     }
+
+    document.getElementById('themeToggle').addEventListener('change', function () {
+      document.body.classList.toggle('dark-mode');
+    });
   </script>
 </body>
 </html>
