--- a/EduQuery.ai/frontend/upload.html
+++ b/EduQuery.ai/frontend/upload.html
@@ -1,107 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>EduQuery AI - Upload</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <title>EduQuery AI – Upload</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #f0f4f7, #d9e2ec);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
     }
 
-    .upload-container {
-      max-width: 500px;
-      margin: 80px auto;
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(10px);
+    .upload-box {
+      background: white;
       padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      border-radius: 15px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
       text-align: center;
+      width: 400px;
+      transition: 0.3s;
     }
 
-    h1 {
+    .upload-box:hover {
+      transform: scale(1.02);
+    }
+
+    .upload-box h2 {
+      color: #2575fc;
       margin-bottom: 20px;
-      color: #2b8aed;
+    }
+
+    .drop-area {
+      border: 2px dashed #6c63ff;
+      border-radius: 10px;
+      padding: 30px;
+      margin-bottom: 20px;
+      background-color: #f7f7f7;
+      transition: background-color 0.2s;
+    }
+
+    .drop-area.dragover {
+      background-color: #e0f7fa;
     }
 
     input[type="file"] {
-      display: block;
-      margin: 20px auto;
+      display: none;
     }
 
-    button {
-      background: #2b8aed;
+    label {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #2575fc;
       color: white;
-      padding: 12px 24px;
-      border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    button:hover {
-      background-color: #1e6cd6;
-      transform: scale(1.03);
-      box-shadow: 0 4px 12px rgba(43, 138, 237, 0.3);
-    }
-
-    .status {
-      margin-top: 15px;
-      color: #4caf50;
+      margin-bottom: 10px;
       font-weight: bold;
     }
 
-    .spinner {
-      font-size: 18px;
-      color: #2b8aed;
+    .file-name {
+      font-size: 14px;
       margin-top: 10px;
+      color: #555;
+    }
+
+    button {
+      background-color: #2575fc;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #1a5ed8;
+    }
+
+    .loader {
+      display: none;
+      margin-top: 20px;
+    }
+
+    .loader i {
+      font-size: 24px;
+      color: #2575fc;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <div class="upload-container">
-    <h1>📄 Upload Document</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-      <input type="file" name="file" id="fileInput" required />
-      <button type="submit">Upload & Chat 💬</button>
-      <div id="status" class="status"></div>
+  <div class="upload-box">
+    <h2><i class="fas fa-file-upload"></i> Upload Document</h2>
+    
+    <form action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
+      <div class="drop-area" id="drop-area">
+        <label for="file"><i class="fas fa-cloud-upload-alt"></i> Choose or Drop File</label>
+        <input type="file" id="file" name="file" accept=".pdf,.docx,.txt" required>
+        <div class="file-name" id="file-name">No file chosen</div>
+      </div>
+      
+      <button type="submit"><i class="fas fa-rocket"></i> Upload & Chat</button>
     </form>
+
+    <div class="loader" id="loader">
+      <i class="fas fa-spinner"></i> Uploading...
+    </div>
   </div>
 
   <script>
-    document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+    const dropArea = document.getElementById('drop-area');
+    const fileInput = document.getElementById('file');
+    const fileName = document.getElementById('file-name');
+    const loader = document.getElementById('loader');
+
+    dropArea.addEventListener('dragover', (e) => {
       e.preventDefault();
-      const file = document.getElementById('fileInput').files[0];
-      if (!file) return alert('Please select a file.');
+      dropArea.classList.add('dragover');
+    });
 
-      const formData = new FormData();
-      formData.append('file', file);
+    dropArea.addEventListener('dragleave', () => {
+      dropArea.classList.remove('dragover');
+    });
 
-      const status = document.getElementById('status');
-      status.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Uploading...';
-
-      try {
-        const res = await fetch('/api/docs/upload', {
-          method: 'POST',
-          body: formData
-        });
-        const data = await res.json();
-        if (res.ok) {
-          localStorage.setItem('docUploaded', 'true');
-          window.location.href = 'chat.html';
-        } else {
-          status.textContent = data.error || 'Upload failed.';
-        }
-      } catch (err) {
-        console.error(err);
-        status.textContent = 'An error occurred during upload.';
+    dropArea.addEventListener('drop', (e) => {
+      e.preventDefault();
+      dropArea.classList.remove('dragover');
+      const files = e.dataTransfer.files;
+      if (files.length > 0) {
+        fileInput.files = files;
+        fileName.textContent = files[0].name;
       }
+    });
+
+    fileInput.addEventListener('change', () => {
+      if (fileInput.files.length > 0) {
+        fileName.textContent = fileInput.files[0].name;
+      }
+    });
+
+    document.getElementById('upload-form').addEventListener('submit', () => {
+      loader.style.display = 'block';
     });
   </script>
 </body>
