--- a/EduQuery.ai/frontend/upload.html
+++ b/EduQuery.ai/frontend/upload.html
@@ -104,7 +104,7 @@
   <div class="upload-box">
     <h2><i class="fas fa-file-upload"></i> Upload Document</h2>
     
-    <form action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
+    <form id="upload-form">
       <div class="drop-area" id="drop-area">
         <label for="file"><i class="fas fa-cloud-upload-alt"></i> Choose or Drop File</label>
         <input type="file" id="file" name="file" accept=".pdf,.docx,.txt" required>
@@ -120,39 +120,64 @@
   </div>
 
   <script>
-    const dropArea = document.getElementById('drop-area');
-    const fileInput = document.getElementById('file');
-    const fileName = document.getElementById('file-name');
-    const loader = document.getElementById('loader');
+  const dropArea = document.getElementById('drop-area');
+  const fileInput = document.getElementById('file');
+  const fileName = document.getElementById('file-name');
+  const loader = document.getElementById('loader');
+  const form = document.getElementById('upload-form');
 
-    dropArea.addEventListener('dragover', (e) => {
-      e.preventDefault();
-      dropArea.classList.add('dragover');
-    });
+  dropArea.addEventListener('dragover', (e) => {
+    e.preventDefault();
+    dropArea.classList.add('dragover');
+  });
 
-    dropArea.addEventListener('dragleave', () => {
-      dropArea.classList.remove('dragover');
-    });
+  dropArea.addEventListener('dragleave', () => {
+    dropArea.classList.remove('dragover');
+  });
 
-    dropArea.addEventListener('drop', (e) => {
-      e.preventDefault();
-      dropArea.classList.remove('dragover');
-      const files = e.dataTransfer.files;
-      if (files.length > 0) {
-        fileInput.files = files;
-        fileName.textContent = files[0].name;
+  dropArea.addEventListener('drop', (e) => {
+    e.preventDefault();
+    dropArea.classList.remove('dragover');
+    const files = e.dataTransfer.files;
+    if (files.length > 0) {
+      fileInput.files = files;
+      fileName.textContent = files[0].name;
+    }
+  });
+
+  fileInput.addEventListener('change', () => {
+    if (fileInput.files.length > 0) {
+      fileName.textContent = fileInput.files[0].name;
+    }
+  });
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault(); // Prevent default form submission
+    loader.style.display = 'block';
+
+    const formData = new FormData(form);
+    try {
+      const response = await fetch('/api/docs/upload', {
+        method: 'POST',
+        body: formData
+      });
+
+      const result = await response.json();
+      if (result.docId) {
+        // Save flag to allow chat page
+        localStorage.setItem('docUploaded', 'true');
+        // Redirect to chat.html with docId
+        window.location.href = `chat.html?docId=${result.docId}`;
+      } else {
+        alert('Upload failed.');
+        loader.style.display = 'none';
       }
-    });
+    } catch (err) {
+      alert('Something went wrong.');
+      loader.style.display = 'none';
+    }
+  });
+</script>
 
-    fileInput.addEventListener('change', () => {
-      if (fileInput.files.length > 0) {
-        fileName.textContent = fileInput.files[0].name;
-      }
-    });
-
-    document.getElementById('upload-form').addEventListener('submit', () => {
-      loader.style.display = 'block';
-    });
-  </script>
 </body>
 </html>
